<?xml version="1.0" encoding="UTF-8"?>
	<!--
		~ $Revision: 96475 $ ~ $Date: 2009-11-02 16:51:02 -0800 (Mon, 02 Nov 2009) $ ~ ~ Copyright (C) 1999-${YEAR} Jive Software. All rights reserved. ~ ~ This software is the proprietary information of
		Jive Software. Use is subject to license terms.
	-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<!--
	 These parameters were pased in via the commandline when this pom was created by the archetype.
      -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.jivesoftware.sbs.plugins</groupId>
    <artifactId>jive-fu-plugin</artifactId>
    <name>jive-fu-plugin</name>
    <version>5.0.2</version>
    <packaging>jar</packaging>
    <description>A living Jive Reference Plugin</description>
    <developers>
    	<developer>
    		<name>Ryan Rutan</name>
    		<url>https://community.jivesoftware.com/people/ryanrutan</url>
    	</developer>
    </developers>

    <build>
        <finalName>${final.name}</finalName>
        <plugins>
            <!-- For compilation-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <!-- Weave aspects into the plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>1.3</version>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjtools</artifactId>
                        <version>1.6.9</version>
                    </dependency>
                </dependencies>
                <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>assembly</id>
                        <phase>package</phase>
                        <goals><goal>single</goal></goals>
                        <configuration>
                            <appendAssemblyId>false</appendAssemblyId>
                            <descriptors>
                                <descriptor>${basedir}/src/main/assembly/assembly-plugin.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId> org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <!-- Unpackages this Jive plugin.  That way it can be used in conjunction with the -DpluginDirs= property, which
                             bypasses the standard plugin installation (which happens via the admin console), by pointing to exploded plugin jar created by this. -->
                        <id>explode-jive-plugin</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                               <mkdir dir="${basedir}/target/${final.name}" />
                               <unjar src="${basedir}/target/${final.name}.jar" dest="${basedir}/target/${final.name}" />
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--  Setup of war file for functional test runs -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-war</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactItems>
                        <artifactItem>
                            <groupId>com.jivesoftware</groupId>
                            <artifactId>jive</artifactId>
                            <type>war</type>
                            <overWrite>false</overWrite>
                        </artifactItem>
                    </artifactItems>
                    <outputDirectory>${project.build.directory}/war</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <!-- <version>${maven-surefire-plugin.version}</version> -->
                <configuration>
                    <skip>true</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>unit</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <skip>false</skip>
                            <excludes>
                                <exclude>**/selenium/*Test.java</exclude>
                                <exclude>**/*IntTest.java</exclude>
                            </excludes>
                            <includes>
                                <include>**/*Test.java</include>
                                <include>**/*TestCase.java</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.jivesoftware</groupId>
            <artifactId>jive</artifactId>
            <version>${jive.version}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.jivesoftware</groupId>
            <artifactId>jive-lib</artifactId>
            <version>${jive.version}</version>
            <type>pom</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.4</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>3.0.3.RELEASE</version>
            <scope>provided</scope>
        </dependency>

        <!-- The following dependencies are for unit testing-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.objenesis</groupId>
            <artifactId>objenesis</artifactId>
            <version>1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib</artifactId>
            <version>2.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock-junit4</artifactId>
            <version>2.4.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>1.4.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>1.4.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.dbunit</groupId>
            <artifactId>dbunit</artifactId>
            <version>2.4.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>2.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty</artifactId>
            <version>6.1.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>emma</groupId>
            <artifactId>emma</artifactId>
            <version>2.1.5320</version>
            <scope>test</scope>
        </dependency>
    	<dependency>
    		<groupId>com.jivesoftware.plugins.retention</groupId>
    		<!-- <groupId>com.jivesoftware.recordsretention</groupId> --> <!-- Try this for 5.0.1.1-0 -->
            <artifactId>records-retention-bridge</artifactId>
            <version>5.0.2.0-0</version>  <!-- Try this for 5.0.1.1-0 -->
            <type>jar</type>
            <scope>provided</scope>
    	</dependency>
        <dependency>
            <groupId>com.jivesoftware</groupId>
            <artifactId>jive</artifactId>
            <version>${jive.version}</version>
            <type>jar</type>
            <classifier>test</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jivesoftware</groupId>
            <artifactId>jive</artifactId>
            <version>${jive.version}</version>
            <type>war</type>
            <scope>test</scope>
        </dependency>
    </dependencies>
        <profiles>
        <profile>
            <id>int</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>emma-maven-plugin</artifactId>
                        <version>${emma-maven-plugin.version}</version>
                        <inherited>true</inherited>
                        <executions>
                            <execution>
                                <phase>process-classes</phase>
                                <goals>
                                    <goal>instrument</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!--  For unit testing -->
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                        <executions>
                            <execution>
                                <id>integration</id>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <skip>false</skip>
                                    <excludes>
                                        <exclude>**/selenium/*Test.java</exclude>
                                    </excludes>
                                    <includes>
                                        <include>**/*IntTest.java</include>
                                    </includes>

                                    <forkMode>perTest</forkMode>
                                    <argLine>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n -Xms1024m -Xmx1512m -XX:MaxPermSize=128m -server -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true</argLine>
                                    <classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
                                    <additionalClasspathElements>
                                        <additionalClasspathElement>${project.build.directory}/test-classes</additionalClasspathElement>
                                        <additionalClasspathElement>${project.build.directory}/war/WEB-INF/classes</additionalClasspathElement>
                                        <additionalClasspathElement>${project.build.directory}/${project.name}</additionalClasspathElement>
                                    </additionalClasspathElements>
                                    <systemPropertyVariables>
                                        <pluginDirs>${project.build.directory}/${project.name}</pluginDirs>
                                        <jive.devMode>true</jive.devMode>
                                        <emma.coverage.out.file>${emma.coverage.out.file}</emma.coverage.out.file>
                                    </systemPropertyVariables>
                                </configuration>
                            </execution>
                            <execution>
                                <id>unit</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <skip>false</skip>
                                    <excludes>
                                        <exclude>**/selenium/*Test.java</exclude>
                                        <exclude>**/*IntTest.java</exclude>
                                    </excludes>
                                    <includes>
                                        <include>**/*Test.java</include>
                                        <include>**/*TestCase.java</include>
                                    </includes>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <properties>
		<!-- If using <parent> section, remove the <jive.version> line below. -->
    	<jive.version>5.0.2.0</jive.version>
    	<jive.min.version>5.0.0.0</jive.min.version>
        <jive.max.version>10.10.10.10</jive.max.version>
        <final.name>${project.artifactId}-${project.version}-${jive.version}</final.name>
        <build.number>${env.BUILD_NUMBER}</build.number>
        <build.project.name>${project.artifactId}</build.project.name>
    </properties>
</project>
